--- a/java-server/src/main/resources/application.yml.example
+++ b/java-server/src/main/resources/application.yml.example
@@ -11,7 +11,7 @@ spring:
   datasource:
    url: jdbc:mysql://202.194.14.120:3306/java_2_06?allowPublicKeyRetrieval=true&useSSL=false
    username: java_2_06
-   password: JavaP206@
+   password: xxxx
   jpa:
     generate-ddl: true
     hibernate.ddl-auto: update
