--- a/java-server/src/main/resources/application.yml.example
+++ b/java-server/src/main/resources/application.yml.example
@@ -9,9 +9,19 @@ spring:
   application:
     name: java-server
   datasource:
-   url: jdbc:mysql://202.194.14.120:3306/java_2_06?allowPublicKeyRetrieval=true&useSSL=false
-   username: java_2_06
-   password: xxxx
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5
+      idle-timeout: 30000
+      connection-timeout: 30000
+      max-lifetime: 1800000
+#    url: jdbc:mysql://127.0.0.1:3306/game0?useUnicode=true&characterEncoding=utf-8&useSSL=true&jdbcCompliantTruncation=false&allowMultiQueries=true
+#    username: root
+#    password: 123456
+    url: jdbc:mysql://202.194.14.120:3306/java_2_06?allowPublicKeyRetrieval=true&useSSL=false
+    username: java_2_06
+    password: xxxx
+
   jpa:
     generate-ddl: true
     hibernate.ddl-auto: update
